fix navigation z-index on map

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -360,7 +360,7 @@ a {
     display: none;
     .navbar {
       background-color: rgb(34, 35, 43);
-      z-index: 1001;
+      z-index: 1002;
 
       .navbar-burger {
         color: #fff;
@@ -424,7 +424,7 @@ a {
       left: 0;
       bottom: 0;
       padding-top: 0;
-      z-index: 1000;
+      z-index: 1001;
       background-color: #22232b;
 
       &.active {
